--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.46.0",
     "@react-three/fiber": "^8.9.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "three": "^0.147.0"
