--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-vite-react-three-tailwind-template",
+  "name": "iphone-14",
   "private": true,
   "version": "0.0.0",
   "type": "module",
